refactor: add serve script, change start script

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "start": "npm run build && http-server",
-    "build": "tsc"
+    "build": "tsc",
+    "serve": "http-server",
+    "start": "tsc && http-server"
   },
   "devDependencies": {
     "http-server": "^14.0.0",
